# pythainlp

./: .coveralls.yml  .editorconfig  .flake8  .gitignore  .markdownlint.json  .markdownlintrc  .pep8speaks.yml  .python-version  .pyup.yml  .travis.yml  .travis.yml.old  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  Dockerfile  HISTORY.rst  INTHEWILD.md  LICENSE  MANIFEST.in  Makefile  READE-Thai.md  README-pypi.md  README-pythainlp.md  README.md  README.rst  README_TH.md  RUST_MODULES.md  References.md  SECURITY.md  SECURITY_ANALYSIS_SUMMARY.md  SECURITY_NOTES.md  SPONSORS.md  TEST_COVERAGE_IMPROVEMENTS.md  TYPE_HINT_ANALYSIS.md  TYPE_HINT_COMPLETE_REPORT.md  (+37 more)
.circleci/: config.yml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_report.md  issue_report.yml
.github/workflows/: bandit.yml  clusterfuzzlite.DISABLED  clusterfuzzlite.yml  codemeta2cff.yml  codeql-analysis.yml  corpus-data.yml  corpus-integrity.yml  corpus.yml  deploy-docs.yml  deploy_docs.yml  greetings.yml  lint.yml  macos-test.yml  markdownlint.yml  mypy.yml  publish-versioned-docs.yml  pypi-publish.yml  pypi-test.py  pypi-test.yml  pythainlp-test.yml  stale.yml  test-macos.yml  test-ubuntu.yml  test-windows.yml  test.yml  type-hint-analysis.yml  unittest.yml  windows-test.yml
build_tools/analysis/: README.md  coverage-analysis.md  gen-csv.py  generate_csv.py  type-analyzer.py  type_hint_analyzer.py
build_tools/github/: update_docs_index.py
conda.recipe/: meta-old.yaml  meta.yaml
docs/: Makefile  about.md  clean_directory.sh  conf.py  docs.md  index.html  index.md  index.rst  install.md  installation.rst  license.md  make.bat  pythainlp-1-3-thai.md  pythainlp-1-4-eng.md  pythainlp-1-4-thai.md  pythainlp-1-5-eng.md  pythainlp-1-5-thai.md  pythainlp-1-6-eng.md  pythainlp-1-6-thai.md  pythainlp-dev-thai.md  search.html  sitemap.xml  thread_safety.md  threadsafe.md  threadsafe.rst  usage.rst  using.md  whatsnew-1.7.md  มีอะไรใหม่ใน PyThaiNLP 1.7.md  วิธีติดตั้ง PyThaiNLP เวชั่นล่าสุดจาก GitHub.md
docs/api/: ancient.rst  augment.rst  benchmarks.rst  braille.rst  change.rst  chat.rst  chunk.rst  classify.rst  cls.rst  collation.rst  coref.rst  corpus.rst  date.rst  el.rst  generate.rst  generator.rst  gpt.rst  khavee.rst  morpheme.rst  ner.rst  number.rst  parse.rst  phayathaibert.rst  romanization.rst  sentiment.rst  soundex.rst  spell.rst  summarize.rst  tag.rst  textaugment.rst  tokenize.rst  tokenizer.rst  tools.rst  translate.rst  transliterate.rst  ulmfit.rst  util.rst  wangchanberta.rst  word_vector.rst  wsd.rst
docs/archive/: pythainlp-1-3-thai.md  pythainlp-1-5-eng.md  pythainlp-1-7.md  pythainlp-dev-thai.md
docs/dev/: pythainlp-1-5-eng.md
docs/mkdocs/: search_index.json
docs/notes/: FAQ.rst  command.rst  command_line.rst  faq.rst  getting_started.rst  installation.rst  license.rst  pythainlp-1_7-2_0.rst  start.rst  threadsafe.rst
docs/pythainlp-1-4-eng/: index.html
docs/pythainlp-1-4-thai/: index.html
docs/type_hint_analysis/: README.md  submodule_summary.csv
example/: etcc.py  normalize.py  romanization.py  segment.py  spell.py  vowel_clean.py  whitespaceTokenizer.py
examples/: collate.py  collation.py  date.py  distributed_pyspark.py  etcc.py  khavee.py  ner.py  normalize.py  romanization.py  soundex.py  spell.py  tcc.py  tokenize.py  transliterate.py  ulmfit_feature_example.ipynb  ulmfit_sentiment_example.ipynb
fuzz/: Dockerfile  README.md  build.sh  fuzz_tokenize.py  fuzz_util_normalize.py
notebooks/: README.md  clean_dict.ipynb  convert_thai2rom_to_onnx.ipynb  create_words.ipynb  pythainlp-get-started.ipynb  sentiment_analysis.ipynb  test-aksonhan.ipynb  test-chat.ipynb  test-wangchanglm.ipynb  test_chat.ipynb  test_el.ipynb  test_gzip_classify.ipynb  test_gzip_cls.ipynb  test_tcc.ipynb  test_wangchanglm.ipynb  test_wsd.ipynb  text_generation.ipynb  ulmfit_feature_example.ipynb  ulmfit_sentiment_example.ipynb  us.ipynb  visualize.py  wongnai_classification.ipynb  word2vec_examples.ipynb  word_detokenize.ipynb
notebooks/sent_data/: README.md
oxidized_thainlp/: __init__.py
pythainlp/: 12.py  MetaSound.py  Text.py  __init__.py  __main__.py  change.py  cli.py  icu.py  nlp.py  py.typed  soundex.py  text.py  text_.py  thaiword.py
pythainlp/_ext/: __init__.py  _normalize_fast.pyi  _normalize_fast.pyx  _thai_fast.pyi  _thai_fast.pyx
pythainlp/ancient/: __init__.py  aksonhan.py  currency.py
pythainlp/augment/: __init__.py  wordnet.py
pythainlp/benchmarks/: __init__.py  metrics.py  word_tokenisation.py  word_tokenization.py
pythainlp/braille/: __init__.py  core.py
pythainlp/change/: __init__.py
pythainlp/chat/: __init__.py  core.py
pythainlp/chunk/: __init__.py  crfchunk.py
pythainlp/classify/: __init__.py  param_free.py
pythainlp/cli/: __init__.py  benchmark.py  corpus.py  data.py  misspell.py  soundex.py  tag.py  tagging.py  tokenization.py  tokenize.py
pythainlp/cls/: __init__.py  param_free.py
pythainlp/collation/: __init__.py  simple.py
pythainlp/coref/: __init__.py  _fastcoref.py  core.py  han_coref.py
romanization/: __init__.py  royin.py
rust_modules/: Cargo.toml
scripts/: bench_full_evidence.py  generate-result-table.py  thai-tokenisation-benchmark.py
segment/: __init__.py  pyicu.py
site/: index.html  search.html  sitemap.xml
tests/: README.md  __init__.py  _noauto_loader.py  test_ancient.py  test_augment.py  test_benchmarks.py  test_classify.py  test_cli.py  test_cls.py  test_coref.py  test_corpus.py  test_el.py  test_generate.py  test_generator.py  test_gpt.py  test_helpers.py  test_khavee.py  test_misspell.py  test_morpheme.py  test_parse.py  test_pythainlp.py  test_soundex.py  test_spell.py  test_summarize.py  test_tag.py  test_textaugment.py  test_tokenize.py  test_tools.py  test_translate.py  test_transliterate.py  test_ulmfit.py  test_util.py  test_wangchanberta.py  test_word_vector.py  test_wsd.py
(+592 files in other folders)
