[package]
name = "pythainlp-rust-modules"
version = "0.1.0"
edition = "2018"
include = ["pythainlp/corpus/*"]
[lib]
name = "pythainlp_rust_modules"
path = "rust_modules/src/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]


[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
regex = "1.4.6"
hashbrown = "0.3"
substring = "1.4.5"
rayon = "1.5"
halfbrown = "0.1.11"
binary-heap-plus = "0.4.1"
lazy_static = "1.4.0"
bytecount = "0.6.2"
smol_str = "0.1.17"
rustc-hash = "1.1.0"
ahash = "0.7.2"


[[bin]]
name = "mybin"
path = "rust_modules/src/main.rs"