[package]
name = "pythainlp-rust-modules"
version = "0.2.0"
edition = "2018"
include = ["pythainlp/corpus/*.txt","pyproject.toml"]
authors = ["Thanathip Suntorntip Gorlph"]

[lib]
name = "oxidized_thainlp"
path = "rust_modules/src/lib.rs"
include = ["pythainlp/corpus/*"]
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]


[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
regex = "1.4.6"
rayon = "1.5"
binary-heap-plus = "0.4.1"
lazy_static = "1.4.0"
bytecount = "0.6.2"
smol_str = "0.1.17"
rustc-hash = "1.1.0"
ahash = "0.7.2"


[[test]]
name = "basic" 
path = "rust_modules/tests/test_tokenizer.rs"