# SPDX-FileCopyrightText: 2016-2026 PyThaiNLP Project
# SPDX-FileType: SOURCE
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythainlp"
version = "5.2.0"
description = "Thai Natural Language Processing library"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "Wannaphong Phatthiyaphaibun", email = "wannaphong@pythainlp.org" },
    { name = "Korakot Chaovavanich" },
    { name = "Charin Polpanumas" },
    { name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" },
    { name = "Lalita Lowphansirikul" },
    { name = "Pattarawat Chormai" },
    { name = "Peerat Limkonchotiwat" },
    { name = "Thanathip Suntorntip" },
    { name = "Can Udomcharoenchaikit" },
]
maintainers = [
    { name = "Wannaphong Phatthiyaphaibun", email = "wannaphong@pythainlp.org" },
    { name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" },
]
keywords = [
    "pythainlp",
    "NLP",
    "natural language processing",
    "tokenization",
    "text processing",
    "linguistics",
    "localization",
    "computational linguistics",
    "ThaiNLP",
    "Thai NLP",
    "Thai language",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: Thai",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
]

# Core dependencies
dependencies = [
    "importlib_resources; python_version < '3.11'",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]

# Development and testing dependencies
dev = [
    "black>=25.11.0",
    "bump-my-version>=1.2.6 ",
    "coverage>=7.10.7",
    "flake8>=7.3.0",
    "ruff>=0.14.14",
    "tox>=4.30.3",
]

# Documentation dependencies
docs = [
    "Sphinx>=6.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
]

# Below are dependencies for optional features

abbreviation = ["khamyo>=0.2.0"]

attacut = ["attacut>=1.0.6"]

benchmarks = ["numpy>=1.22", "pandas>=0.24", "PyYAML>=5.4.1"]

budoux = ["budoux>=0.7.0"]

coreference_resolution = ["fastcoref>=2.1.5", "spacy>=3.0"]

dependency_parsing = [
    "spacy_thai>=0.7.1",
    "transformers>=4.22.1",
    "ufal.chu-liu-edmonds>=1.0.2",
]

el = ["multiel>=0.5"]

esupar = ["esupar>=1.3.8", "numpy>=1.22", "transformers>=4.22.1"]

generate = ["fastai<2.0"]

icu = ["pyicu>=2.3"]

ipa = ["epitran>=1.1"]

ml = ["numpy>=1.22", "torch>=1.0.0"]

mt5 = ["sentencepiece>=0.1.91", "transformers>=4.22.1"]

nlpo3 = ["nlpo3>=1.4.0"]

onnx = ["numpy>=1.22", "onnxruntime>=1.10.0", "sentencepiece>=0.1.91"]

oskut = ["oskut>=1.3"]

sefr_cut = ["sefr_cut>=1.1"]

spacy_thai = ["spacy_thai>=0.7.1"]

spell = ["phunspell>=0.1.6", "symspellpy>=6.7.6"]

ssg = ["ssg>=0.0.8"]

textaugment = ["bpemb>=0.3.2", "gensim>=4.0.0"]

thai_nner = ["thai_nner>=0.3"]

thai2fit = ["emoji>=0.5.1", "gensim>=4.0.0", "numpy>=1.22"]

thai2rom = ["numpy>=1.22", "torch>=1.0.0"]

translate = [
    'fairseq>=0.10.0,<0.13;python_version<"3.11"',
    'fairseq-fixed==0.12.3.1,<0.13;python_version>="3.11"',
    "sacremoses>=0.0.41",
    "sentencepiece>=0.1.91",
    "torch>=1.0.0",
    "transformers>=4.22.1",
    "word2word>=1.0.0",
]

transformers_ud = ["transformers>=4.22.1", "ufal.chu-liu-edmonds>=1.0.2"]

wangchanberta = ["sentencepiece>=0.1.91", "transformers>=4.22.1"]

wangchanglm = ["pandas>=0.24", "sentencepiece>=0.1.91", "transformers>=4.22.1"]

word_approximation = ["panphon>=0.20.0"]

wordnet = ["nltk>=3.3"]

wsd = ["sentence-transformers>=2.2.2"]

wtp = ["transformers>=4.22.1", "wtpsplit>=1.0.1"]

wunsen = ["wunsen>=0.0.3"]

# Below are defined groups of CI testing dependencies

# Compact dependencies - safe small set of optional dependencies
compact = [
    "nlpo3>=1.4.0",
    "numpy>=1.26.0",
    "pyicu>=2.3",
    "python-crfsuite>=0.9.7",
    "PyYAML>=5.4.1",
]

# Extra dependencies - for tests.extra modules
# Note: Some packages excluded due to Python 3.13 compatibility issues
# Excluded: attacut, deepcut, oskut, sefr_cut (TensorFlow-based, Python 3.13 issues)
# Excluded: tltk (compilation issues)
# Excluded: phunspell (compilation issues)
extra = [
    "bpemb>=0.3.2",
    "budoux>=0.7.0",
    "gensim>=4.0.0",
    "nltk>=3.3",
    "pandas>=0.24",
    "ssg>=0.0.8",
    "symspellpy>=6.7.6",
]

# Full dependencies - pinned where available
full = [
    "attacut==1.0.6",
    "bpemb>=0.3.6,<0.4",
    "budoux==0.7.0",
    "deepcut==0.7.0.0",
    "emoji>=0.6.0,<1",
    "epitran==1.26.0",
    "esupar>=1.3.9,<2",
    'fairseq>=0.10.0,<0.13;python_version<"3.11"',
    'fairseq-fixed==0.12.3.1,<0.13;python_version>="3.11"',
    "fastai>=1.0.61,<2",
    "fastcoref==2.1.6",
    "gensim>=4.3.3,<5",
    "khamyo>=0.3.0",
    "khanaa>=0.1.1,<1",
    "nlpo3>=1.4.0",
    "nltk>=3.6.6,<4",
    "numpy>=1.26.0,<3",
    "onnxruntime>=1.10.0",
    "oskut>=1.3",
    "pandas>=2.2.0,<3",
    "panphon==0.22.2",
    "phunspell==0.1.6",
    "pyicu>=2.15.2,<3",
    "python-crfsuite==0.9.12",
    "PyYAML>=5.4.1,<6.0.2",
    "sacremoses==0.1.1",
    "sentence-transformers>=2.7.0,<3",
    "sentencepiece==0.2.1",
    "spacy==3.8.7,<4",
    "spacy_thai==0.7.8",
    "ssg==0.0.8",
    "sefr_cut>=1.1",
    "symspellpy==6.9.0",
    "thai-nner==0.3",
    "tltk>=1.6.8,<2",
    "torch>=1.13.1,<3",
    "transformers==4.57.6",
    "ufal.chu-liu-edmonds==1.0.3",
    "word2word>=1.0.0,<2",
    "wtpsplit==1.3.0",
    "wunsen==0.0.3",
]

[project.urls]
homepage = "https://pythainlp.org/"
source = "https://github.com/PyThaiNLP/pythainlp.git"
download = "https://pypi.org/project/pythainlp/#files"
changelog = "https://github.com/PyThaiNLP/pythainlp/blob/dev/CHANGELOG.md"
releasenotes = "https://github.com/PyThaiNLP/pythainlp/releases"
documentation = "https://pythainlp.org/docs/"
issues = "https://github.com/PyThaiNLP/pythainlp/issues"
"Tutorials" = "https://pythainlp.org/tutorials/"

[project.scripts]
thainlp = "pythainlp.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
pythainlp = ["corpus/*"]

# Bumpversion configuration
[tool.bumpversion]
current_version = "5.2.0"
commit = true
tag = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(?P<build>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}-{release}{build}",
    "{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pythainlp/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.bumpversion.parts.release]
optional_value = "prod"
first_value = "dev"
values = ["dev", "beta", "prod"]

# Coverage configuration
[tool.coverage.run]
source = ["pythainlp"]

# Ruff configuration
[tool.ruff]
indent-width = 4
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Flag errors (`C901`) whenever the complexity level exceeds 5. Default is 10.
# We should aim to gradually reduce this to 10.
mccabe.max-complexity = 38
select = [
    "E",
    "F",
    "I",
    "W",
    "S",
    "B028",
    "C901",
    "F401",
    "F811",
    "F841",
    "W291",
    "W293",
]
# Some rules are ignored for now; we can consider enabling them in the future.
# S101 is use of assert statement, should be an easy fix.
extend-ignore = ["E402", "E501", "E722", "S101", "S202", "S301", "S310"]

[tool.tox]
envlist = ["py39", "py310", "py311", "py312", "py313", "py314", "py3", "pypy3", "flake8"]
skip_missing_interpreters = true

[tool.tox.testenv]
setenv = { PYTHONPATH = "{toxinidir}:{toxinidir}/pythainlp" }
changedir = "tests"
commands = ["discover"]
deps = ["discover"]

[tool.tox.envs.pypy3]
basepython = "pypy3.10"
setenv = { PYTHONPATH = "{toxinidir}:{toxinidir}/pythainlp" }
changedir = "tests"
commands = ["discover"]
deps = ["discover"]

[tool.tox.envs.flake8]
basepython = "python"
deps = ["flake8"]
commands = ["flake8 pythainlp"]
