[bumpversion]
current_version = 1.7.1
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pythainlp/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
