[bumpversion]
current_version = 2.1.4
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
    {major}.{minor}.{patch}-{release}{build}
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values =
    dev
    prod

[bumpversion:part:build]

[bumpversion:file:setup.py]
search = version={current_version}
replace = {new_version}

[bumpversion:file:pythainlp/__init__.py]
search = __version__={current_version}
replace = {new_version}

[metadata]
description-file = README.md
